--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 <p class="b">Duus aala sortak maaya !</p>
 <a href="zeyad.html" target="_blank"><img class="hamza" src="hamza.jpg" alt="ana wlkhwal"></a>
 <a href="zeyad.html" target="_blank"><img class="zeyad" src="zeyad2.jpg" alt="anaa wlkhwal"></a>
-<a href="zeyad.html" target="_blank"><img class="sajed" src="sajed.jpg" alt="ana wlkhawall"></a>
+<a href="sajed.html" target="_blank"><img class="sajed" src="sajed.jpg" alt="ana wlkhawall"></a>
 </body>
 </html>
