--- a/hamza.html
+++ b/hamza.html
@@ -87,7 +87,7 @@
 </head>
 <body>
   <p class="a">Teezak lonha eh?</p>
-  <a href="sajed2.html" target="_blank"><p class="b">Pink</p></a>
-  <a href="sajed2.html" target="_blank"><p class="c">Ahmar</p></a>
+  <a href="hamza2.html" target="_blank"><p class="b">Pink</p></a>
+  <a href="hamza2.html" target="_blank"><p class="c">Ahmar</p></a>
 </body>
 </html>
