--- a/hamza2.html
+++ b/hamza2.html
@@ -57,9 +57,9 @@ margin-left: -740px;
 
   <p class="a">Meen el Khwal el flsura?</p>
 
-  <img class="photo1" src="sajed.jpg"ana wlkhwal">
+  <img class="photo1" src="hamza.jpg">
   <a href="all.html"><p class="me">GhandouR</p></a>
-  <a href="lastzeyad.html"><p class="zeyad">Sajed</p></a>
+  <a href="lastzeyad.html"><p class="zeyad">Hamza</p></a>
   <a href="all.html"><p class="c"> Mafeesh Khwlat</p></a>
   
  
