--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
       width: 400px;
 }
   body{
-    background-color: rgb(239, 239, 239);
+    background-color: rgb(239, 239, 238);
   }
   </style>
 </head>
 <body>
 <p class="a">Ahla messa aaleko yregala !</p>
 <p class="b">Duus aala sortak maaya !</p>
-<a href="zeyad.html" target="_blank"><img class="hamza" src="hamza.jpg" alt="ana wlkhwal"></a>
+<a href="hamza.html" target="_blank"><img class="hamza" src="hamza.jpg" alt="ana wlkhwal"></a>
 <a href="zeyad.html" target="_blank"><img class="zeyad" src="zeyad2.jpg" alt="anaa wlkhwal"></a>
 <a href="sajed.html" target="_blank"><img class="sajed" src="sajed.jpg" alt="ana wlkhawall"></a>
 </body>
+
 </html>
